animation fixes; animations removed from components; overflow to keep everything else in place on transitions

--- a/source/stylus/app/_animations.styl
+++ b/source/stylus/app/_animations.styl
@@ -67,7 +67,7 @@
     transform translateY(0)
     opacity 1
   to
-    transform translateY(-100%)
+    transform translateY(100%)
     opacity 0.5
 
 
